feat: add Rust crate import support via rustdoc JSON + FFM
Import any Rust crate as a Kotlin library using the new `rustImport { }` DSL.
The plugin parses the crate's public API via `cargo rustdoc --output-format json`,
generates Rust FFI bridges (#[no_mangle] extern "C" fn), and reuses the existing
FfmProxyGenerator to produce JVM proxy classes — zero changes to the Rust crate required.

Pipeline: rustdoc JSON → RustdocJsonParser → KneModule → RustBridgeGenerator + FfmProxyGenerator → cargo build → bundled .so in JAR

Includes:
- RustdocJsonParser: parses rustdoc JSON into KneModule (structs, enums, functions)
- RustBridgeGenerator: generates Rust #[no_mangle] extern "C" fn wrappers
- RustWorkAction: orchestrates parse → codegen → bridge injection
- GenerateRustBindingsTask + CargoBuildTask: Gradle tasks
- RustImportExtension: DSL for crate configuration
- Example rust-calculator with Compose Desktop UI powered by Rust via FFM
- 58 unit tests (parser + bridge generator)